ヘッダー部分のコーディングまで

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       content="width=device-width, initial-scale=1,
   maximum-scale=5"
     />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <link rel="icon" href="devchallenges.png" />
 
@@ -21,75 +23,43 @@
       rel="stylesheet"
     />
 
-    <title>Devchallenges</title>
-
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
+    <title>Devchallenges - Edie homepage</title>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
-
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
+    <div class="edie">
+      <div class="edie__header">
+        <div class="edie__logo">Edie</div>
+        <div class="edie__nav__buttons">
+          <div class="edie__nav__button">Home</div>
+          <div class="edie__nav__button">Services</div>
+          <div class="edie__nav__button">Our Works</div>
+          <div class="edie__nav__button">Clients</div>
+          <div class="edie__nav__button">Contact</div>
+        </div>
       </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
+      <div class="edie__unhappy">
+        <div class="edie__unhappy__message">Unhappy with your website?</div>
+        <div class="edie__unhappy__tohappy">
+          We create beautiful<br />
+          and fast web services
+        </div>
+      </div>
+      <img
+        src="./images/heroImage.jpg"
+        alt="hero image"
+        class="edie__hero__image"
+      />
+      <div class="edie__unhappy">
+        <div class="edie__unhappy__tohappy">
+          Story, emotion<br />
+          and purpose
+        </div>
+        <div class="edie__unhappy__message">
+          We help transform your ideas into real world applications that will
+          outperform your toughest competition and help you achieve your
+          strategic goals in short period of time.
+        </div>
+      </div>
     </div>
   </body>
 </html>
