story部分のコーディング完了

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <div class="edie__nav__button">Contact</div>
         </div>
       </div>
-      <div class="edie__unhappy">
+      <div class="edie__hero">
         <div class="edie__unhappy__message">Unhappy with your website?</div>
-        <div class="edie__unhappy__tohappy">
+        <div class="edie__message">
           We create beautiful<br />
           and fast web services
         </div>
@@ -49,15 +49,25 @@
         alt="hero image"
         class="edie__hero__image"
       />
-      <div class="edie__unhappy">
-        <div class="edie__unhappy__tohappy">
+      <div class="edie__hero bottom">
+        <div class="edie__message">
           Story, emotion<br />
           and purpose
         </div>
-        <div class="edie__unhappy__message">
+        <div class="edie__help__message">
           We help transform your ideas into real world applications that will
           outperform your toughest competition and help you achieve your
           strategic goals in short period of time.
+        </div>
+        <div class="edie__submit">
+          <div class="edie__submit__message">Want us to contact you?</div>
+          <input
+            type="email"
+            name="edie-submit"
+            class="edie__submit__input"
+            placeholder="Email"
+          />
+          <button class="edie__submit__button">Join</button>
         </div>
       </div>
     </div>
