wip:カードの実装

--- a/index.html
+++ b/index.html
@@ -70,6 +70,40 @@
           <button class="edie__submit__button">Join</button>
         </div>
       </div>
+      <div class="edie__services">
+        <div class="edie__header__message services">
+          We offer high demand services
+        </div>
+        <div class="edie__services__cards">
+          <div class="edie__services__card">
+            <div class="service__icon"></div>
+            <div class="service__job">UI/UX Design</div>
+            <div class="service__detail">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+              metus ac nulla consequat aliquet id quis turpis.
+            </div>
+            <div class="service__start__button">Get started</div>
+          </div>
+          <div class="edie__services__card">
+            <div class="service__icon"></div>
+            <div class="service__job">Front End</div>
+            <div class="service__detail">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+              metus ac nulla consequat aliquet id quis turpis.
+            </div>
+            <div class="service__start__button">Get started</div>
+          </div>
+          <div class="edie__services__card">
+            <div class="service__icon"></div>
+            <div class="service__job">Back End</div>
+            <div class="service__detail">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+              metus ac nulla consequat aliquet id quis turpis.
+            </div>
+            <div class="service__start__button">Get started</div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
