コメントのコーディング完了

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     />
 
     <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
+    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
@@ -70,13 +75,15 @@
           <button class="edie__submit__button">Join</button>
         </div>
       </div>
-      <div class="edie__services">
+      <div class="edie__phases edie__services">
         <div class="edie__header__message services">
           We offer high demand services
         </div>
         <div class="edie__services__cards">
           <div class="edie__services__card">
-            <div class="service__icon"></div>
+            <div class="service__icon ui">
+              <span class="material-icons"> edit </span>
+            </div>
             <div class="service__job">UI/UX Design</div>
             <div class="service__detail">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
@@ -84,23 +91,40 @@
             </div>
             <div class="service__start__button">Get started</div>
           </div>
-          <div class="edie__services__card">
-            <div class="service__icon"></div>
+          <div class="edie__services__card shadow">
+            <div class="service__icon frontend">
+              <span class="material-icons"> code </span>
+            </div>
             <div class="service__job">Front End</div>
             <div class="service__detail">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
               metus ac nulla consequat aliquet id quis turpis.
             </div>
-            <div class="service__start__button">Get started</div>
+            <div class="service__start__button primary">Get started</div>
           </div>
           <div class="edie__services__card">
-            <div class="service__icon"></div>
+            <div class="service__icon backend">
+              <span class="material-icons"> dns </span>
+            </div>
             <div class="service__job">Back End</div>
             <div class="service__detail">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
               metus ac nulla consequat aliquet id quis turpis.
             </div>
             <div class="service__start__button">Get started</div>
+          </div>
+        </div>
+      </div>
+      <div class="edie__phases edie__comment">
+        <div class="edie__comment__message">
+          “Fast and outstanding resutls. Edie understands their customer’s
+          needs. They have a young and talented team.”
+        </div>
+        <div class="edie__comment__person">
+          <img src="./images/person4.png" alt="Carlos Tran image" />
+          <div class="edie__person__name">
+            Carlos Tran
+            <div class="edie__person__job">The Decorate Gatsby</div>
           </div>
         </div>
       </div>
