フッター部分のコーディング完了

--- a/index.html
+++ b/index.html
@@ -1,136 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
 
-    <link rel="icon" href="devchallenges.png" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1,
+  maximum-scale=5" />
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+  </link>
 
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
+  <link rel="icon" href="devchallenges.png" />
 
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+  <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
-    <title>Devchallenges - Edie homepage</title>
-  </head>
-  <body>
-    <div>
-      <div class="edie">
-        <div class="edie__header">
-          <div class="edie__logo">Edie</div>
-          <div class="edie__nav__buttons">
-            <div class="edie__nav__button">Home</div>
-            <div class="edie__nav__button">Services</div>
-            <div class="edie__nav__button">Our Works</div>
-            <div class="edie__nav__button">Clients</div>
-            <div class="edie__nav__button">Contact</div>
-          </div>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
+
+  <title>Devchallenges - Edie homepage</title>
+</head>
+
+<body>
+  <div>
+    <div class="edie">
+      <div class="edie__header">
+        <div class="edie__logo">Edie</div>
+        <div class="edie__nav__buttons">
+          <div class="edie__nav__button">Home</div>
+          <div class="edie__nav__button">Services</div>
+          <div class="edie__nav__button">Our Works</div>
+          <div class="edie__nav__button">Clients</div>
+          <div class="edie__nav__button">Contact</div>
         </div>
-        <div class="edie__hero">
-          <div class="edie__unhappy__message">Unhappy with your website?</div>
-          <div class="edie__message">
-            We create beautiful<br />
-            and fast web services
-          </div>
+      </div>
+      <div class="edie__hero">
+        <div class="edie__unhappy__message">Unhappy with your website?</div>
+        <div class="edie__message">
+          We create beautiful<br />
+          and fast web services
         </div>
-        <img
-          src="./images/heroImage.jpg"
-          alt="hero image"
-          class="edie__hero__image"
-        />
-        <div class="edie__hero bottom">
-          <div class="edie__message">
-            Story, emotion<br />
-            and purpose
-          </div>
-          <div class="edie__help__message">
-            We help transform your ideas into real world applications that will
-            outperform your toughest competition and help you achieve your
-            strategic goals in short period of time.
-          </div>
-          <div class="edie__submit">
-            <div class="edie__submit__message">Want us to contact you?</div>
-            <input
-              type="email"
-              name="edie-submit"
-              class="edie__submit__input"
-              placeholder="Email"
-            />
-            <button class="edie__submit__button">Join</button>
-          </div>
+      </div>
+      <img src="./images/heroImage.jpg" alt="hero image" class="edie__hero__image" />
+      <div class="edie__hero bottom">
+        <div class="edie__message">
+          Story, emotion<br />
+          and purpose
         </div>
-        <div class="edie__phases edie__services">
-          <div class="edie__header__message services">
-            We offer high demand services
-          </div>
-          <div class="edie__services__cards">
-            <div class="edie__services__card">
-              <div class="service__icon ui">
-                <span class="material-icons"> edit </span>
-              </div>
-              <div class="service__job">UI/UX Design</div>
-              <div class="service__detail">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
-                metus ac nulla consequat aliquet id quis turpis.
-              </div>
-              <div class="service__start__button">Get started</div>
-            </div>
-            <div class="edie__services__card shadow">
-              <div class="service__icon frontend">
-                <span class="material-icons"> code </span>
-              </div>
-              <div class="service__job">Front End</div>
-              <div class="service__detail">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
-                metus ac nulla consequat aliquet id quis turpis.
-              </div>
-              <div class="service__start__button primary">Get started</div>
-            </div>
-            <div class="edie__services__card">
-              <div class="service__icon backend">
-                <span class="material-icons"> dns </span>
-              </div>
-              <div class="service__job">Back End</div>
-              <div class="service__detail">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
-                metus ac nulla consequat aliquet id quis turpis.
-              </div>
-              <div class="service__start__button">Get started</div>
-            </div>
-          </div>
+        <div class="edie__help__message">
+          We help transform your ideas into real world applications that will
+          outperform your toughest competition and help you achieve your
+          strategic goals in short period of time.
         </div>
-        <div class="edie__phases edie__comment">
-          <div class="edie__comment__message">
-            “Fast and outstanding resutls. Edie understands their customer’s
-            needs. They have a young and talented team.”
-          </div>
-          <div class="edie__comment__person">
-            <img src="./images/person4.png" alt="Carlos Tran image" />
-            <div class="edie__person__name">
-              Carlos Tran
-              <div class="edie__person__job">The Decorate Gatsby</div>
+        <div class="edie__submit">
+          <div class="edie__submit__message">Want us to contact you?</div>
+          <input type="email" name="edie-submit" class="edie__submit__input" placeholder="Email" />
+          <button class="edie__submit__button">Join</button>
+        </div>
+      </div>
+      <div class="edie__phases edie__services">
+        <div class="edie__header__message services">
+          We offer high demand services
+        </div>
+        <div class="edie__services__cards">
+          <div class="edie__services__card">
+            <div class="service__icon ui">
+              <span class="material-icons"> edit </span>
             </div>
+            <div class="service__job">UI/UX Design</div>
+            <div class="service__detail">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+              metus ac nulla consequat aliquet id quis turpis.
+            </div>
+            <div class="service__start__button">Get started</div>
+          </div>
+          <div class="edie__services__card shadow">
+            <div class="service__icon frontend">
+              <span class="material-icons"> code </span>
+            </div>
+            <div class="service__job">Front End</div>
+            <div class="service__detail">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+              metus ac nulla consequat aliquet id quis turpis.
+            </div>
+            <div class="service__start__button primary">Get started</div>
+          </div>
+          <div class="edie__services__card">
+            <div class="service__icon backend">
+              <span class="material-icons"> dns </span>
+            </div>
+            <div class="service__job">Back End</div>
+            <div class="service__detail">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+              metus ac nulla consequat aliquet id quis turpis.
+            </div>
+            <div class="service__start__button">Get started</div>
           </div>
         </div>
       </div>
-      <div class="edie__footer">
+      <div class="edie__phases edie__comment">
+        <div class="edie__comment__message">
+          “Fast and outstanding resutls. Edie understands their customer’s
+          needs. They have a young and talented team.”
+        </div>
+        <div class="edie__comment__person">
+          <img src="./images/person4.png" alt="Carlos Tran image" />
+          <div class="edie__person__name">
+            Carlos Tran
+            <div class="edie__person__job">The Decorate Gatsby</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="edie__footer">
+      <div class="edie__footer__menu">
         <div class="edie__footer__buttons">
           <div class="edie__menu">
             <div class="edie__menu__button">Home</div>
@@ -140,17 +123,28 @@
             <div class="edie__menu__button">Contact</div>
           </div>
           <div class="edie__sns">
-            <div>Edie</div>
+            <div class="edie__logo">Edie</div>
+            <div class="edie__sns__icons">
+              <i class="fa-brands fa-instagram-square"></i>
+              <i class="fa-brands fa-linkedin"></i>
+              <i class="fa-brands fa-twitter-square"></i>
+            </div>
           </div>
           <div class="edie__contact">
-            <div>Want us to contact you?</div>
+            <div class="edie__submit">
+              <div class="edie__submit__message footer">Want us to contact you?</div>
+              <input type="email" name="edie-submit" class="edie__submit__input" placeholder="Email" />
+              <button class="edie__submit__button">Join</button>
+            </div>
           </div>
         </div>
-        <footer>
-          created by <span class="footer-user-name">username</span> -
-          devChallenges.io
-        </footer>
       </div>
+      <footer>
+        created by <span class="footer-user-name">username</span> -
+        devChallenges.io
+      </footer>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
