wip: モバイル表示対応

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=
+Heebo:wght@400;500&display=swap" rel="stylesheet" />
 
   <title>Devchallenges - Edie homepage</title>
 </head>
@@ -32,6 +34,11 @@
           <div class="edie__nav__button">Our Works</div>
           <div class="edie__nav__button">Clients</div>
           <div class="edie__nav__button">Contact</div>
+        </div>
+        <div class="edie__nav__mobile">
+          <span class="material-icons">
+            menu
+          </span>
         </div>
       </div>
       <div class="edie__hero">
