wip: team枠のコーディング

--- a/index.html
+++ b/index.html
@@ -105,6 +105,24 @@ Heebo:wght@400;500&display=swap" rel="stylesheet" />
           </div>
         </div>
       </div>
+      <div class="edie__phases edie__team">
+        <div>
+          <div class="edie__team__red">
+            Meet the team
+          </div>
+          <div class="edie__header__message">
+            We are chilled and a laidback team
+          </div>
+          <div class="edie__team__message">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
+        </div>
+        <div>
+          <img src="./images/person1.png" alt="">
+          <img src="./images/person2.png" alt="">
+          <img src="./images/person3.png" alt="">
+        </div>
+      </div>
       <div class="edie__phases edie__comment">
         <div class="edie__comment__message">
           “Fast and outstanding resutls. Edie understands their customer’s
