team部分のコーディング完了

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@ Heebo:wght@400;500&display=swap" rel="stylesheet" />
             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           </div>
         </div>
-        <div>
-          <img src="./images/person1.png" alt="">
-          <img src="./images/person2.png" alt="">
-          <img src="./images/person3.png" alt="">
+        <div class="edie__team__persons">
+          <img src="./images/person1.png" alt="young guy">
+          <img src="./images/person2.png" alt="senior man">
+          <img src="./images/person3.png" alt="senior woman">
         </div>
       </div>
       <div class="edie__phases edie__comment">
