see moreのコーディング完了

--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@ Heebo:wght@400;500&display=swap" rel="stylesheet" />
           </div>
         </div>
       </div>
+      <div class="edie__phases edie__businesses">
+        <div class="edie__header__message">
+          Good design means good business
+        </div>
+        <div class="edie__business__cards"></div>
+        <div class="edie__business__see">see more
+          <span class="material-icons">
+            arrow_right_alt
+          </span>
+        </div>
+      </div>
       <div class="edie__phases edie__team">
         <div>
           <div class="edie__team__red">
