一旦コーディング完了

--- a/index.html
+++ b/index.html
@@ -106,10 +106,39 @@ Heebo:wght@400;500&display=swap" rel="stylesheet" />
         </div>
       </div>
       <div class="edie__phases edie__businesses">
-        <div class="edie__header__message">
+        <div class="edie__header__message business">
           Good design means good business
         </div>
-        <div class="edie__business__cards"></div>
+        <div class="edie__business__cards">
+          <div class="edie__business__card">
+            <div class="edie__business__color">
+              <img src='./images/smarthome.jpg'>
+            </div>
+            <div class="edie__business__category">Full stack application</div>
+            <div class="edie__business__name">Smart home dashboard</div>
+          </div>
+          <div class="edie__business__card">
+            <div class="edie__business__color">
+              <img src="./images/onboard.png" alt="" srcset="">
+            </div>
+            <div class="edie__business__category">Full stack application</div>
+            <div class="edie__business__name">Smart home dashboard</div>
+          </div>
+          <div class="edie__business__card">
+            <div class="edie__business__color">
+              <img src="./images/booking.png" alt="" srcset="">
+            </div>
+            <div class="edie__business__category">Full stack application</div>
+            <div class="edie__business__name">Smart home dashboard</div>
+          </div>
+          <div class="edie__business__card">
+            <div class="edie__business__color">
+              <img src="./images/juice-product.png" alt="" srcset="">
+            </div>
+            <div class="edie__business__category">Front End applicati on</div>
+            <div class="edie__business__name">Juice product homepage</div>
+          </div>
+        </div>
         <div class="edie__business__see">see more
           <span class="material-icons">
             arrow_right_alt
