写真部分のコーディングを微修正

--- a/index.html
+++ b/index.html
@@ -158,9 +158,11 @@ Heebo:wght@400;500&display=swap" rel="stylesheet" />
           </div>
         </div>
         <div class="edie__team__persons">
-          <img src="./images/person1.png" alt="young guy">
-          <img src="./images/person2.png" alt="senior man">
           <img src="./images/person3.png" alt="senior woman">
+          <div class="edie__team__persons__second">
+            <img src="./images/person1.png" alt="young guy">
+            <img src="./images/person2.png" alt="senior man">
+          </div>
         </div>
       </div>
       <div class="edie__phases edie__comment">
@@ -205,7 +207,7 @@ Heebo:wght@400;500&display=swap" rel="stylesheet" />
         </div>
       </div>
       <footer>
-        created by <span class="footer-user-name">username</span> -
+        created by <span class="footer-user-name">miruoo</span> -
         devChallenges.io
       </footer>
     </div>
